--- a/index.html
+++ b/index.html
@@ -971,6 +971,248 @@
   border-color: #d83b01;
 }
 
+/* Entry button */
+.ts-entry-btn {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  border: none;
+  background: radial-gradient(circle at 30% 30%, #ff66ff, #8a2be2);
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0 0 18px rgba(255, 0, 204, 0.6);
+  z-index: 9000;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.ts-entry-btn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 26px rgba(255, 0, 204, 0.9);
+}
+
+/* Overlay */
+.ts-overlay {
+  position: fixed;
+  inset: 0;
+  display: none;
+  z-index: 9990;
+  overflow: hidden;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+/* Backdrop dim */
+.ts-backdrop {
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at top, rgba(255, 0, 204, 0.25), transparent),
+              radial-gradient(circle at bottom, rgba(138, 43, 226, 0.35), #050011);
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+/* Scroll panels */
+.ts-scroll-panel {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background: linear-gradient(135deg, #8a2be2, #ff00cc, #ff66ff);
+  box-shadow: 0 0 40px rgba(255, 0, 204, 0.6);
+  border-radius: 18px;
+  opacity: 0;
+}
+.ts-scroll-top {
+  top: -40%;
+  width: 80%;
+  height: 40%;
+}
+.ts-scroll-middle {
+  top: 30%;
+  width: 0;
+  height: 40%;
+}
+
+/* Main UI */
+.ts-ui {
+  position: absolute;
+  inset: 32px;
+  border-radius: 24px;
+  background: rgba(10, 0, 30, 0.8);
+  backdrop-filter: blur(24px);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transform: scale(0.96);
+  display: flex;
+  flex-direction: column;
+  color: #fdf5ff;
+  overflow: hidden;
+  transition: opacity 0.35s ease, transform 0.35s ease;
+}
+
+/* Header */
+.ts-header {
+  display: flex;
+  align-items: center;
+  padding: 16px 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+  gap: 12px;
+}
+.ts-title {
+  font-size: 20px;
+  font-weight: 600;
+}
+.ts-subtitle {
+  font-size: 12px;
+  opacity: 0.8;
+}
+.ts-close-btn {
+  margin-left: auto;
+  border: none;
+  background: transparent;
+  color: #fdf5ff;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 4px 8px;
+  border-radius: 999px;
+  transition: background 0.2s ease;
+}
+.ts-close-btn:hover {
+  background: rgba(255, 255, 255, 0.08);
+}
+
+/* Body layout */
+.ts-body {
+  flex: 1;
+  display: flex;
+  min-height: 0;
+}
+
+/* Sidebar */
+.ts-sidebar {
+  width: 210px;
+  padding: 12px;
+  border-right: 1px solid rgba(255, 255, 255, 0.06);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  transform: translateX(-40px);
+  opacity: 0;
+}
+.ts-side-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  border-radius: 999px;
+  border: none;
+  padding: 8px 12px;
+  background: rgba(255, 255, 255, 0.04);
+  color: #fdf5ff;
+  cursor: pointer;
+  font-size: 13px;
+  transition: background 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
+}
+.ts-side-item:hover {
+  background: rgba(255, 255, 255, 0.08);
+  transform: translateX(4px);
+  box-shadow: 0 0 12px rgba(255, 0, 204, 0.4);
+}
+.ts-icon {
+  width: 20px;
+  text-align: center;
+}
+
+/* Main area */
+.ts-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 16px 18px;
+  gap: 12px;
+}
+
+/* Search */
+.ts-search-wrap {
+  display: flex;
+  justify-content: flex-start;
+}
+.ts-search {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 14px;
+  border-radius: 999px;
+  background: radial-gradient(circle at top left, rgba(255, 0, 204, 0.35), rgba(20, 0, 50, 0.9));
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  box-shadow: 0 0 18px rgba(255, 0, 204, 0.5);
+  transform: translateY(20px) scale(0.9);
+  opacity: 0;
+}
+.ts-search-icon {
+  font-size: 14px;
+}
+.ts-search input {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fdf5ff;
+  font-size: 13px;
+  width: 260px;
+}
+.ts-search input::placeholder {
+  color: rgba(255, 230, 255, 0.7);
+}
+
+/* Content */
+.ts-content {
+  flex: 1;
+  margin-top: 8px;
+  padding: 12px 14px;
+  border-radius: 16px;
+  background: radial-gradient(circle at top, rgba(255, 0, 204, 0.18), rgba(10, 0, 30, 0.95));
+  border: 1px solid rgba(255, 255, 255, 0.06);
+  overflow-y: auto;
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+/* Active overlay state (triggered via JS) */
+.ts-overlay.ts-active .ts-backdrop {
+  opacity: 1;
+}
+.ts-overlay.ts-active .ts-ui {
+  opacity: 1;
+  transform: scale(1);
+}
+.ts-overlay.ts-active .ts-sidebar {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 0.35s ease 0.25s, transform 0.35s ease 0.25s;
+}
+.ts-overlay.ts-active .ts-search {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  transition: opacity 0.35s ease 0.35s, transform 0.35s ease 0.35s;
+}
+
+/* Scroll animation keyframes */
+@keyframes tsScrollTopIn {
+  0% { top: -40%; opacity: 0; }
+  100% { top: 0; opacity: 1; }
+}
+@keyframes tsScrollMiddleIn {
+  0% { width: 0; opacity: 0; }
+  100% { width: 80%; opacity: 1; }
+}
+.ts-overlay.ts-animating .ts-scroll-top {
+  animation: tsScrollTopIn 0.5s ease forwards;
+}
+.ts-overlay.ts-animating .ts-scroll-middle {
+  animation: tsScrollMiddleIn 0.5s ease 0.1s forwards;
+}
+
   </style>
   <style id="theme-style"></style>
 </head>
