Adjust z-index for app-preview class

--- a/index.html
+++ b/index.html
@@ -929,6 +929,7 @@
 }
 
 .app-preview {
+  z-index: 1; /* lower value = back */
   position: relative;
   display: inline-flex;
   align-items: center;
